--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 
 /*
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	http://fullvideoall.kro.kr/ 
+	Web디자인 개편 CSS소스
+	
+	Dimension by HTML5 UP html5up.net | @ajlkn (라이센스)
 */
 
 html, body, div, span, applet, object,
